<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_string">Contact</string>
	<string name="name_hint">Name</string>
	<string name="phone_hint">Phone</string>
	<string name="country_hint">Country</string>
	<string name="email_hint">Email</string>
	<string name="cancel_string">Cancel</string>
	<string name="reset_string">Reset</string>
	<string name="submit_string">Submit</string>
    <string name="validation_empty_string">This cannot be empty</string>
    <string name="validation_empty_name">Please enter a name</string>
    <string name="validation_empty_phone_or_email">Please enter either a phone number or an email address</string>
    <string name="validation_email_address_format">Please check the format of your email address</string>
    
</resources>
