<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Screen Title -->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>
    
    <!-- Input Fields -->

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/TitleLabel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/name_hint" 
        android:inputType="textCapWords">

        <requestFocus />
    </EditText>
    
     <EditText
        android:id="@+id/contact_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/name"
        android:layout_marginTop="14dp"
        android:ems="10"
       android:visibility="gone"
        android:inputType="text|phone">
    </EditText>
    
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/name"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/phone_hint" 
        android:inputType="text|phone">
    </EditText>
    
    
    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/phone"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/country_hint" 
        android:inputType="textCapWords">
    </EditText>
    
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/country"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/email_hint" 
        android:inputType="textEmailAddress">
    </EditText>

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string" />

</RelativeLayout>